--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,17 @@ out/
 !**/src/main/**/out/
 !**/src/test/**/out/
 
+### Logs ###
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+.tmp
+dist
+dist-ssr
+*.local
